try to fix upload avatar on iphone

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -218,6 +218,7 @@
     align-items: center;
     position: relative;
     cursor: pointer;
+    z-index: 999999999;
 }
 .settingsss  label {
     cursor: default;
